--- a/Time_Series_Assignment/Tex/ref.bib
+++ b/Time_Series_Assignment/Tex/ref.bib
@@ -23,8 +23,10 @@
 @book{johansenMLE,
   title={Likelihood-based inference in cointegrated vector autoregressive models},
   author={Johansen, S{\o}ren},
+  abstract={This book gives a detailed mathematical and statistical analysis of the cointegrated vector autoregresive model. This model had gained popularity because it can at the same time capture the short-run dynamic properties as well as the long-run equilibrium behaviour of many non-stationary time series. It also allows relevant economic questions to be formulated in a consistent statistical framework. Part I of the book is planned so that it can be used by those who want to apply the methods without going into too much detail about the probability theory. The main emphasis is on the derivation of estimators and test statistics through a consistent use of the Guassian likelihood function. It is shown that many different models can be formulated within the framework of the autoregressive model and the interpretation of these models is discussed in detail. In particular, models involving restrictions on the cointegration vectors and the adjustment coefficients are discussed, as well as the role of the constant and linear drift. In Part II, the asymptotic theory is given the slightly more general framework of stationary linear processes with i.i.d. innovations. Some useful mathematical tools are collected in Appendix A, and a brief summary of weak convergence in given in Appendix B. The book is intended to give a relatively self-contained presentation for graduate students and researchers with a good knowledge of multivariate regression analysis and likelihood methods. The asymptotic theory requires some familiarity with the theory of weak convergence of stochastic processes. The theory is treated in detail with the purpose of giving the reader a working knowledge of the techniques involved. Many exercises are provided. The theoretical analysis is illustrated with the empirical analysis of two sets of economic data. The theory has been developed in close contract with the application and the methods have been implemented in the computer package CATS in RATS as a result of a rcollaboation with Katarina Juselius and Henrik Hansen.},
   year={1995},
-  publisher={OUP Oxford}
+  publisher={Oxford University Press},
+  url={https://EconPapers.repec.org/RePEc:oxp:obooks:9780198774501}
 }
 
 @article{ppp,
@@ -54,4 +56,35 @@
 	month = feb,
 	year = {1998},
 	note = {Publication Title: CSAE Working Paper Series},
+}
+
+@article{es_test,
+author = { David   Edgerton  and  Ghazi   Shukur },
+title = {Testing autocorrelation in a system perspective testing autocorrelation},
+journal = {Econometric Reviews},
+volume = {18},
+number = {4},
+pages = {343-386},
+year  = {1999},
+publisher = {Taylor & Francis},
+doi = {10.1080/07474939908800351},
+
+URL = {
+        https://doi.org/10.1080/07474939908800351
+
+},
+eprint = {
+        https://doi.org/10.1080/07474939908800351
+
+}
+,
+    abstract = { The Breusch-Godfrey test for autocorrelated errors is generalised to cover systems of equations, and the properties of 18 versions of the test are studied using Monte Carlo methods. We show that only one group of tests regularly has actual size close to the nominal size; namely the likelihood ratio tests of the auxiliary regression system that are corrected in some manner for degrees-of-freedom. The Rao Ftest exhibits the best performance, whilst the commonly used TR2 test behaves badly even in single equations. However, the size and power properties of all tests deteriorate sharply as the number of equations increases, the system becomes more dynamic, the exogenous variables become more autocorrelated and the sample size decreases. This performance has, in general, an unknown degree since the interaction amongst these factors does not permit a predictive summary, as might be hoped for by response surface-type approaches. }
+}
+
+@book{ts_an,
+   title =     {New Introduction to Multiple Time Series Analysis},
+   author =    {Helmut Lütkepohl},
+   publisher = {New York :, Springer},
+   isbn =      {3540401725; 9783540401728; 9783540277521; 3540277528},
+   year =      {2005}
 }
